--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <section>Hello Icuteme!</section>
+    <section>Love Icuteme!</section>
 </body>
 </html>
